2002-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>
	
	* src/crc.c: Removed. Replaced with the CRC package.
	* src/cksum.c: Removed the posix_crc function.
	* src/flash.c: Use the crc package crc functions.
	* src/xyzModem.c: Ditto
	* include/redboot.h: Use the crc package include file.
	* cdl/redboot.cdl: removed crc.c 

2002-08-09  Jani Monoses  <jani@iv.ro>

	* src/net/http_client.c: use standard HTTP GET request ('/' 
	instead of ' ' in HTTP/1.0) to work with all servers
	
2002-08-08  Jani Monoses  <jani@iv.ro>

	* src/flash.c: fis delete should mark the slot as reusable
	not just delete the area of flash used by the file.
	
2002-08-08  Gary Thomas  <gthomas@ecoscentric.com>
2002-08-08  Motoya Kurotsu <kurotsu@allied-telesis.co.jp>	

	* src/load.c (do_load): Make sure 'io_tab' is set before using it.

2002-08-07  Gary Thomas  <gary@chez-thomas.org>

	* src/net/tftp_client.c: 
	* include/net/tftp.h: Make block numbers unsigned to handle files
	larger than 16MB.

2002-08-06  Gary Thomas  <gary@chez-thomas.org>

	* src/crc.c: POSIX crc code is now separate.
	
	* src/mfill.c: 
	* src/mcmp.c: 
	* src/dump.c: 
	* src/cksum.c: 
	* src/caches.c: New (split out) file(s).

	* src/main.c: 
	* cdl/redboot.cdl: Split major CLI functionality to separate
	files, more easily controlled by CDL - inspired by Andrew.

2002-08-06  Andrew Lunn  <Andrew.Lunn@ascom.ch>

	* src/io.c: Fix the parsing of boot scripts to allow the use
	  of aliases. This was broken when the ability to do startup
	  type specific scripting was added.

2002-08-05  Andrew Lunn  <Andrew.Lunn@ascom.ch>

	* src/main.c: Made more of the commands conditionally compilable
	* cdl/redboot.cdl: CDL code to control the compilation.
	
2002-07-30  Gary Thomas  <gary@chez-thomas.org>

	* src/net/net_io.c: Handle broadcast/mask setup better (failed if
	not found in FLASH).  Also print on network info line.

2002-07-18  Gary Thomas  <gary@chez-thomas.org>

	* src/net/tftp_client.c: 
	* src/net/http_client.c: 