@@ -1,3 +1,10 @@
+2002-08-16  Jani Monoses  <jani@iv.ro>
+
+	* src/io.c: Do not add empty lines to command history.
+	* src/net/http_client.c: Read all data when in CLOSE_WAIT
+	otherwise if the server closes quickly enough nothing is 
+	received.
+	
 2002-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>
 	
 	* src/crc.c: Removed. Replaced with the CRC package.
